--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express-fileupload": "^1.2.1",
     "firebase-admin": "^10.0.0",
     "mongodb": "^4.1.4",
-    "nodemon": "^2.0.15",
     "stripe": "^8.188.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
